--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "frontend-project-lvl1",
   "version": "1.0.0",
   "description": "My first project",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
