--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    strategy:
+      matrix:
+        node-version: [14.x]
+    
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: npx eslint .
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, build
+      run: |
+        make install
+    - name: Run Linter
+      run: |
+        make lint
+      
+      
 
    
