--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "frontend-project-lvl1",
+  "name": "@hexlet/frontend-project-lvl1",
   "version": "1.0.0",
   "description": "My first project",
   "main": "src/index.js",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
     "brain-gcd": "bin/brain-gcd.js",
     "brain-progression": "bin/brain-progression.js",
     "brain-prime": "bin/brain-prime.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production babel src --out-dir dist",
-    "prepublishonly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -33,7 +27,6 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.0"
   }
 }
